Changed css to stop title overflow onto newline

--- a/client/src/sass/components/_DocumentPanel.scss
+++ b/client/src/sass/components/_DocumentPanel.scss
@@ -29,6 +29,7 @@
     text-align: left;
     margin: 5px;
     width: max-content;
+    white-space: nowrap;
   }
 
   .doc-version-title {
